Added a nicer README

--- a/README
+++ b/README
@@ -1,1 +1,16 @@
 This is a simple app for exporting Gowalla photos to Flickr. The app runs on Heroku with background workers to handle the uploading.
+
+The app is available on http://goflickr.cgb.im
+
+*Feature requests/known bugs:*
+
+- Properly handle Flickr upload errors to save double uploading error
+- Adhere to privacy of photo
+- Add lat/long to photos
+- Add comments from photo to Flickr
+
+*Implemented*
+- Do not import existing photos unless required
+- Disable app
+- Add Gowalla tag
+
