--- a/README
+++ b/README
@@ -2,15 +2,16 @@ This is a simple app for exporting Gowalla photos to Flickr. The app runs on Her
 
 The app is available on http://goflickr.cgb.im
 
-*Feature requests/known bugs:*
+## Feature requests/known bugs:
 
-- Properly handle Flickr upload errors to save double uploading error
-- Adhere to privacy of photo
-- Add lat/long to photos
-- Add comments from photo to Flickr
+* Properly handle Flickr upload errors to save double uploading error
+* Adhere to privacy of photo
+* Add lat/long to photos
+* Add comments from photo to Flickr
 
-*Implemented*
-- Do not import existing photos unless required
-- Disable app
-- Add Gowalla tag
+## Implemented
+
+* Do not import existing photos unless required
+* Disable app
+* Add Gowalla tag
 
